...
        onPressed: () => Scaffold.of(context).openDrawer(),
      ),
      actions: <Widget>[
        Consumer<Playlist>(
          builder: (context, playlist, _) => IconButton(
            icon: const Icon(Icons.playlist_play),
            tooltip: 'Playlist',
            onPressed: playlist.isNotEmpty ? () => Navigator.pushNamed(context, '/playlist') : null,
          ),
        ),
        Consumer<Collection>(
          builder: (context, collection, _) => IconButton(
            icon: const Icon(Icons.search),
            tooltip: 'Search',
            onPressed: collection.isNotEmpty ? () => showSearch(context: context, delegate: AlbumSearch()) : null,
          ),
        ),
        if ([TargetPlatform.macOS, TargetPlatform.windows, TargetPlatform.linux].contains(platform))
          Consumer<LoadingStatus>(
            builder: (context, status, _) => IconButton(
...
