...
    }

    return Container(
      margin: const EdgeInsets.only(top: 10.0),
      child: FloatingActionButton(
        onPressed: playlist.isScrobbling ? null : () => handleScrobble(context, playlist),
        tooltip: 'Scrobble',
        backgroundColor: playlist.isScrobbling ? Theme.of(context).primaryColor : null,
        foregroundColor: Theme.of(context).primaryColor,
        //shape: StadiumBorder(side: BorderSide(color: Theme.of(context).primaryColor, width: 0.5)),
        heroTag: null,
        child: playlist.isScrobblingPaused
            ? Container()
...
              key: _whenToolTipKey,
              message: ScrobblePlaylistEditor.whenTooltipMessage,
              child: Row(
                mainAxisSize: MainAxisSize.min,
                crossAxisAlignment: CrossAxisAlignment.center,
                children: <Widget>[
                  const Text('When?'),
                  Icon(Icons.info_outline, size: 20, color: Colors.grey[300]),
                ],
              ),
            ),
          ),
          title: Slider(
...
